# chick

./: .gitmodules  Cargo.toml  README  build.rs  rust-toolchain.toml
src/: idt.rs  macros.rs  main.rs  panic.rs
src/arch/: mod.rs
src/arch/x86_64/: console.rs  interrupts.rs  mod.rs
src/kernel/: Cargo.toml
src/kernel/.cargo/: config.toml
src/kernel/src/: cspace.rs  error.rs  macros.rs  main.rs  syscall.rs  vspace.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/x86_64/: acpi.rs  apic.rs  console.rs  interrupts.rs  mm.rs  mod.rs  pic.rs  pit.rs  syscall.rs  tick.rs  trapframe.rs
src/kernel/src/arch/x86_64/console/: framebuffer.rs  logger.rs  mod.rs
src/kernel/src/arch/x86_64/constants/: apic.rs  interrupts.rs  mod.rs
src/kernel/src/arch/x86_64/interrupts/: gdt.rs  idt.rs  mod.rs
src/kernel/src/arch/x86_64/vspace/: entry.rs  level.rs  mod.rs  tlb.rs
src/kernel/src/objects/: capability.rs  capacity.rs  cnode.rs  endpoint.rs  frame.rs  mod.rs  nullcap.rs  tcb.rs  traits.rs  untyped.rs  vspace.rs
src/kernel/src/scheduler/: executor.rs  mod.rs  percore.rs  sync.rs  task.rs
