[workspace]
members = ["src/kernel"]
resolver = "2"

[package]
name = "chick"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "src/kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
