[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
spin = "0.10"
bootloader_api = "0.11"
bootloader-x86_64-common = "0.11.10"
bootloader-boot-config = "0.11.10"
x86_64 = "0.15"
x86 = "0.52"
acpi = "5.2.0"