[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
spin = "0.10"
noto-sans-mono-bitmap = { version = "0.3", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader_api = "0.11"
x86_64 = "0.15"
acpi = "5.2.0"

[features]
default = ["framebuffer"]
framebuffer = ["noto-sans-mono-bitmap"]